[package]
name = "sqlite-mjs"
version = "0.0.1"
edition = "2021"

[package.metadata.wasm-pack.profile.dev]
wasm-opt = ["--asyncify"]
wasm-bindgen = { dwarf-debug-info = true }

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Os", "--asyncify"]


[lib]
crate-type = ["cdylib"]

[dependencies]
js-sys = "0.3.61"
wasm-bindgen = "0.2.84"
wasm-bindgen-futures = "0.4.34"

[build-dependencies]
bindgen = "0.64.0"
cc = "1.0.79"
eyre = "0.6.8"
